compiles on Linux with OpenSim v4.0

--- a/CPP/CMakeLists.txt
+++ b/CPP/CMakeLists.txt
@@ -1,9 +1,11 @@
-cmake_minimum_required (VERSION 2.8.5)
-project(MuscleForceDirection)
+cmake_minimum_required(VERSION 3.0)
+project(MuscleForceDirection VERSION 1.0.0)
 
-set(CMAKE_BUILD_TYPE Release)
+if(UNIX AND NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the build type" FORCE)
+endif()
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR})
-find_package(OpenSim)
+# compilation database (completion for Linux)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(lib)
+add_subdirectory(MuscleForceDirection)
